--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,14 @@ li {
   color: #98ca9e;
   margin-right: 10px;
 }
+
+@media (max-width: 768px) {
+  .pricing {
+    flex-direction: column;
+  }
+
+  .container {
+    margin: 2rem;
+    padding: 40px 30px;
+  }
+}
